 (Format: Year/Month/Day)
Changes for 1.0rc3:
*07/01/16:
   * Make right-clicking on iconbar button behave the same way as tabs (Mark)
     IconButton.cc
   * Don't force user to reconfigure manually in order to apply menu and
     default window transparency changes; instead, in order to conserve system
     resources, do it a half-second after the user stops changing them (Mark)
     Screen.cc
*07/01/15:
   * Prevent per-window alpha menu from scrolling past 0 or 255 (Mark)
     IntResMenuItem.hh
   * Fix rootmenu disappearing on reconfigure (Mark)
     Screen.cc
*07/01/14:
   * Stay on the same workspace after a restart (Mark)
     Screen.cc
   * Properly 'properly fix' shaded and stuck windows on restart -- i.e. allow
     windows to deiconify themselves the rest of the time (Mark)
     Window.cc
   * Several changes for background style option: (Mark)
     - now support `background: mod' to coincide with fbsetroot -mod --
       In addition to `background.color' and `background.colorTo', this option
       must also set `background.modX' and `background.modY' to integers
     - added `background: none' for styles that do not include a background
     - fixed bug with style backgrounds not getting set when changing styles
     - updated default styles to be valid wrt background options
     RootTheme.cc/hh Screen.cc FbTk/Theme.hh
   * Minor fix for window cycling on multiple screens (Mark)
     fluxbox.cc
*07/01/13:
   * Only change focus order when user specifically focuses a window (Mark)
     Screen.cc Window.cc FocusControl.cc/hh
*07/01/11:
   * Added option to :Minimize key command to lower all windows in the same
     layer as the focused window -- syntax is `:Minimize (layer)' (Mark)
     FbCommandFactory.cc WorkspaceCmd.cc/hh
*07/01/08:
   * Fix another 64-bit window property (Mark/Simon)
     FbTk/FbWindow.cc
*07/01/07:
   * Update Iconbar Mode menu when updating settings (Mark)
     IconbarTool.cc